style: update spinner, add colors to game summary arc, update game summary page, fix navbar alignment

--- a/src/styles/components/_home.css
+++ b/src/styles/components/_home.css
@@ -1,10 +1,3 @@
-/* .shift__up {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  top: -10%;
-} */
-
 .world__icon {
   width: 500px;
 }
