--- a/src/styles/layout/_containers.css
+++ b/src/styles/layout/_containers.css
@@ -23,11 +23,20 @@
   box-shadow: 0 4px 15px #888;
 }
 
-.score__container {
+.summary__container__left {
   position: fixed;
-  top: 20vh;
+  top: 100px;
   left: 0;
   margin: 1rem;
+  background-color: rgb(255 255 255 / 0.5);
+}
+
+.summary__container__right {
+  position: fixed;
+  top: 100px;
+  right: 0;
+  margin: 1rem;
+  margin-top: 4rem;
   background-color: rgb(255 255 255 / 0.5);
 }
 
